Fixed bug #34272 (empty array onto COM object blows up) fix mem leaks WS fixes add test