ext/com_dotnet/com_handlers.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: com_handlers.c,v 1.30.2.3 2006/01/26 11:17:34 rrichards Exp $ */
+/* $Id: com_handlers.c,v 1.30.2.4 2006/02/04 10:57:27 rrichards Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -634,9 +634,11 @@ void php_com_object_free_storage(void *object TSRMLS_DC)
 	VariantClear(&obj->v);
 
 	if (obj->method_cache) {
+		zend_hash_destroy(obj->method_cache);
 		FREE_HASHTABLE(obj->method_cache);
 	}
 	if (obj->id_of_name_cache) {
+		zend_hash_destroy(obj->id_of_name_cache);
 		FREE_HASHTABLE(obj->id_of_name_cache);
 	}
 	efree(obj);
